name fullscreenjs => @jerry-qiqi/fullscreenjs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fullscreen-js",
+  "name": "@jerry-qiqi/fullscreenjs",
   "version": "1.0.0",
   "description": "The Fullscreen API is easier to use",
   "main": "dist/index.js",
